src/components/Cart.module.css
.cart {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  box-sizing: border-box;
  width: 350px;
  margin-top: 20px;
  padding: 10px;
  background-color: #ffffff;
  border-radius: 5px;
  top: 20px;
  position: sticky;
  height: max-content;
  box-shadow: 0 0 10px rgb(168, 168, 168);
}
.cart_btn {
  cursor: pointer;
  color: white;
  font-size: 1rem;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  border: none;
  border-radius: 5px;
  width: 100%;
  height: 50px;
  background-color: var(--main-green);
}
.add_meal {
  overflow-y: scroll;
  max-height: 70vh;
}
.add_meal,
.delivery_fee {
  border-bottom: 1px solid var(--light-grey);
}
.add_meal_line,
.delivery_fee > p,
.total_order > p {
  line-height: 1.5rem;
  color: var(--secondary-black);
  margin: 20px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.add_meal_line .col_1 {
  display: flex;
  align-items: center;
  margin-right: 10px;
}
.add_meal_line .col_1 span {
  margin-right: 3px;
}
.add_meal_line .col_1 .meal_name {
  margin-left: 5px;
}
.add_meal_line .col_2 {
  min-width: max-content;
}
.add_meal_line .col_1 .minus,
.add_meal_line .col_1 .plus {
  color: var(--main-green);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
.delivery_fee > p {
  margin: 10px 0;
}

.total_order > p {
  font-size: 1.2rem;
  color: var(--primary-black);
  font-weight: bold;
}
.empty_cart {
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--light-grey);
}
.inactive {
  background-color: rgb(184, 184, 184);
  cursor: not-allowed;
}

@media (max-width: 991.98px) {
  .cart {
    display: none;
  }
}

